Trello Todos: Ensure that the pieces do not have a capped width. Only the hight of pieces should be consistent but the width can be flexible Limited edition broken UI
Extras:
Add a piece Modal UI improved
Fixed responsive variables

--- a/src/assets/styles/flashflex/components/_card.scss
+++ b/src/assets/styles/flashflex/components/_card.scss
@@ -71,6 +71,7 @@
 	////////////////////////////////////////
 	// Card variations
 	&.square {
+		width: auto;
 		.image {
 			width: 150px;
 			height: 150px;
@@ -207,6 +208,7 @@
 		}
 	}
 	&.unlabeled {
+		width: auto;
 		.image {
 			width: 150px;
 			height: 200px;
